--- a/code/MenuTest3/MonoGame.Meny/MonoGame.Meny/MonoGame.Meny.csproj
+++ b/code/MenuTest3/MonoGame.Meny/MonoGame.Meny/MonoGame.Meny.csproj
@@ -47,7 +47,7 @@
     <Compile Include="MenuComponent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SubMenu.cs" />
+    <Compile Include="MenuChoiceValue.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
