--- a/code/SugarAdventure/SugarAdventure/SugarAdventure.csproj
+++ b/code/SugarAdventure/SugarAdventure/SugarAdventure.csproj
@@ -46,8 +46,8 @@
     <Compile Include="Coin.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GroundLayer.cs" />
-    <Compile Include="IEntity.cs" />
-    <Compile Include="IInteractable.cs" />
+    <Compile Include="Interfaces\IEntity.cs" />
+    <Compile Include="Interfaces\IInteractable.cs" />
     <Compile Include="InputManager.cs" />
     <Compile Include="Layer.cs" />
     <Compile Include="Level.cs" />
