--- a/code/SugarAdventure/SugarAdventure/SugarAdventure.csproj
+++ b/code/SugarAdventure/SugarAdventure/SugarAdventure.csproj
@@ -45,8 +45,10 @@
     <Compile Include="Entities\Coin.cs" />
     <Compile Include="Entities\Enemy.cs" />
     <Compile Include="Entities\Key.cs" />
-    <Compile Include="Entities\Lock.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="GameScreens\GameScreen.cs" />
+    <Compile Include="GameScreens\MainGameScreen.cs" />
+    <Compile Include="GameScreens\StartupGameScreen.cs" />
+    <Compile Include="Managers\GameScreenManager.cs" />
     <Compile Include="Interfaces\IEntity.cs" />
     <Compile Include="Interfaces\IInteractable.cs" />
     <Compile Include="Interfaces\IPickupable.cs" />
@@ -57,12 +59,18 @@
     <Compile Include="Managers\EntityManager.cs" />
     <Compile Include="Managers\InputManager.cs" />
     <Compile Include="Managers\LevelManager.cs" />
+    <Compile Include="Menu\KeyboardComponent.cs" />
+    <Compile Include="Menu\MenuChoice.cs" />
+    <Compile Include="Menu\MenuChoiceValue.cs" />
+    <Compile Include="Menu\MenuComponent.cs" />
+    <Compile Include="Menu\MenuTest.cs" />
     <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SugarGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
